# 3DViewer_v1.0

./: README.md
src/: Makefile  convert.sh  doxyconfig  tests.c
src/3dviewer_v1/: CMakeLists.txt  main.cpp  pictures.qrc
src/3dviewer_v1/back/: s21_3dviewer.h  s21_parser.c  s21_transformations.c
src/3dviewer_v1/front/: s21_3dviewer.cpp  s21_3dviewer.h  s21_3dviewer.ui  s21_glwidget.cpp  s21_glwidget.h  s21_numlineedit.cpp  s21_numlineedit.h  s21_sizes.cpp  s21_sizes.h  s21_sizes.ui
src/3dviewer_v1/front/QtGifImage/: egif_lib.c  qgifglobal.h
src/models/: truncated-tetrahedron.txt  vampire_girl.txt  エクストリームガンダムエクストリームアプリケーションオン.txt
